[gd_scene load_steps=49 format=2]

[ext_resource path="res://FactoryScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_events_off.png" type="Texture" id=2]
[ext_resource path="res://Assets/Conveyors/conv_quadrants/QuadU_none.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tileables/img_factory_red_120x.png" type="Texture" id=4]
[ext_resource path="res://Assets/Building/img_tree.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tileables/img_factory_lime_120x.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tileables/img_factory_orange_120x.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tileables/img_factory_purple_120x.png" type="Texture" id=8]
[ext_resource path="res://Globals.gd" type="Script" id=9]
[ext_resource path="res://Fonts/minecraft_regular.otf" type="DynamicFontData" id=10]
[ext_resource path="res://tmpAddStructure.gd" type="Script" id=11]
[ext_resource path="res://Assets/Tileables/img_factory_grey_120x.png" type="Texture" id=12]
[ext_resource path="res://BottomBarNode.gd" type="Script" id=13]
[ext_resource path="res://Assets/Tileables/img_factory_128x.png" type="Texture" id=14]
[ext_resource path="res://Assets/Tileables/img_factory_brown_120x.png" type="Texture" id=15]
[ext_resource path="res://BeepBox-Song.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Resources/img_empty_solid.png" type="Texture" id=17]
[ext_resource path="res://Assets/Tileables/img_factory_blue_120x.png" type="Texture" id=18]
[ext_resource path="res://Assets/Menu/img_menu_yes.png" type="Texture" id=21]
[ext_resource path="res://Assets/Tileables/img_factory_green_120x.png" type="Texture" id=22]
[ext_resource path="res://oldConveyor.gd" type="Script" id=24]
[ext_resource path="res://Assets/Menu/img_menu_no.png" type="Texture" id=25]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_populace_off.png" type="Texture" id=26]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_upgrades_off.png" type="Texture" id=28]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_quests_off.png" type="Texture" id=29]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_factory_on.png" type="Texture" id=30]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_crafting_off.png" type="Texture" id=31]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_settings_off.png" type="Texture" id=58]
[ext_resource path="res://Assets/Buttons/BottomBarSquare/img_research_off.png" type="Texture" id=59]
[ext_resource path="res://Assets/Menu/img_menu_black_36x.png" type="Texture" id=68]
[ext_resource path="res://tmpTileDetect.gd" type="Script" id=78]
[ext_resource path="res://tmpConfirm.gd" type="Script" id=79]
[ext_resource path="res://Assets/Misc/img_progress_circle.png" type="Texture" id=80]
[ext_resource path="res://Assets/Menu/img_tile_white.png" type="Texture" id=81]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 135, 52 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135, 52 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 135, 52 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 135, 52 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=6]
radius = 110.0

[sub_resource type="DynamicFont" id=7]
size = 56
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 56
font_data = ExtResource( 10 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 128, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 128, 0, 128, 128, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 128, 128, 0, 128, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 128, 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 64, 64 )

[node name="Game" type="Node2D"]

[node name="Globals" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="FactoryNode" parent="Globals" instance=ExtResource( 1 )]

[node name="CraftingNode" type="Control" parent="Globals"]
margin_left = 1080.0
margin_right = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/CraftingNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesNode" type="Control" parent="Globals"]
margin_left = 2160.0
margin_right = 2160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/UpgradesNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 22 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResearchNode" type="Control" parent="Globals"]
margin_left = 3240.0
margin_right = 3240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/ResearchNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 18 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventsNode" type="Control" parent="Globals"]
margin_top = 1920.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/EventsNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 15 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestsNode" type="Control" parent="Globals"]
margin_left = 1080.0
margin_top = 1920.0
margin_right = 1080.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/QuestsNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulaceNode" type="Control" parent="Globals"]
margin_left = 2160.0
margin_top = 1920.0
margin_right = 2160.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/PopulaceNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsNode" type="Control" parent="Globals"]
margin_left = 3240.0
margin_top = 1920.0
margin_right = 3240.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="TextureRect" parent="Globals/SettingsNode"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 12 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBarNode" type="Node2D" parent="."]
position = Vector2( 0, 1632 )
scale = Vector2( 1.011, 1 )
script = ExtResource( 13 )

[node name="BottomBar" type="TextureRect" parent="BottomBarNode"]
margin_right = 1080.0
margin_bottom = 272.0
rect_scale = Vector2( 0.985, 1.07 )
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnFactoryFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 0, -3 )
normal = ExtResource( 30 )
shape = SubResource( 1 )

[node name="btnCraftingFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 266, -3 )
normal = ExtResource( 31 )
shape = SubResource( 2 )

[node name="btnUpgradesFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 532, -3 )
normal = ExtResource( 28 )
shape = SubResource( 3 )

[node name="btnResearchFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 798, -3 )
normal = ExtResource( 59 )
shape = SubResource( 4 )

[node name="btnEventsFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 0, 128 )
normal = ExtResource( 2 )

[node name="btnQuestsFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 266, 128 )
normal = ExtResource( 29 )

[node name="btnPopulaceFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 532, 128 )
normal = ExtResource( 26 )

[node name="btnSettingsFloor" type="TouchScreenButton" parent="BottomBarNode"]
position = Vector2( 798, 128 )
normal = ExtResource( 58 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="templateNode" type="Node2D" parent="."]
position = Vector2( -799.072, -1515.17 )

[node name="tmpText" type="Label" parent="templateNode"]
margin_left = 80.7938
margin_top = -40.005
margin_right = 516.794
margin_bottom = 59.995
rect_pivot_offset = Vector2( -2813.23, -1445.46 )
custom_fonts/font = SubResource( 5 )
text = "Templates"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpAddStructure" type="TextureRect" parent="templateNode"]
margin_left = 400.0
margin_top = 400.0
margin_right = 656.0
margin_bottom = 656.0
texture = ExtResource( 5 )
stretch_mode = 4
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAdd" type="TouchScreenButton" parent="templateNode/tmpAddStructure"]
position = Vector2( 16, 16 )
shape = SubResource( 6 )

[node name="tmpStructure" type="TextureRect" parent="templateNode"]
margin_left = 400.0
margin_top = 100.0
margin_right = 656.0
margin_bottom = 356.0
size_flags_horizontal = 9
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labStructure" type="Label" parent="templateNode/tmpStructure"]
margin_top = 128.0
margin_right = 256.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = -3
text = "structure"
align = 1
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grdInfo" type="VBoxContainer" parent="templateNode/tmpStructure"]
margin_right = 256.0
margin_bottom = 256.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpStorage" type="HBoxContainer" parent="templateNode"]
margin_left = 113.782
margin_top = -300.0
margin_right = 413.782
margin_bottom = -236.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labCurrent" type="Label" parent="templateNode/tmpStorage"]
margin_left = 61.0
margin_right = 95.0
margin_bottom = 64.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labSlash" type="Label" parent="templateNode/tmpStorage"]
margin_left = 99.0
margin_right = 133.0
margin_bottom = 64.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "/"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labCapacity" type="Label" parent="templateNode/tmpStorage"]
margin_left = 137.0
margin_right = 171.0
margin_bottom = 64.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "3"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texResource" type="TextureRect" parent="templateNode/tmpStorage"]
margin_left = 175.0
margin_right = 239.0
margin_bottom = 64.0
texture = ExtResource( 17 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpProcess" type="HBoxContainer" parent="templateNode"]
margin_left = 113.782
margin_top = -200.0
margin_right = 413.782
margin_bottom = -136.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labProcess" type="Label" parent="templateNode/tmpProcess"]
margin_left = 29.0
margin_right = 271.0
margin_bottom = 57.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
text = "-[Xms]->"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpResource" type="TextureRect" parent="templateNode"]
margin_left = 541.555
margin_top = 9.03217
margin_right = 573.555
margin_bottom = 41.0322
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpConveyorNode" type="Node2D" parent="templateNode"]
script = ExtResource( 24 )

[node name="tmpSegment" type="Node2D" parent="templateNode"]
position = Vector2( 877, -2 )
z_index = 1
z_as_relative = false

[node name="texSegment" type="TextureRect" parent="templateNode/tmpSegment"]
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 14 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuadU" type="TouchScreenButton" parent="templateNode/tmpSegment"]
shape = SubResource( 13 )
shape_centered = false

[node name="texQuad" type="TextureRect" parent="templateNode/tmpSegment/btnQuadU"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuadR" type="TouchScreenButton" parent="templateNode/tmpSegment"]
shape = SubResource( 14 )
shape_centered = false

[node name="texQuad" type="TextureRect" parent="templateNode/tmpSegment/btnQuadR"]
margin_right = 128.0
margin_bottom = 128.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuadD" type="TouchScreenButton" parent="templateNode/tmpSegment"]
shape = SubResource( 15 )
shape_centered = false

[node name="texQuad" type="TextureRect" parent="templateNode/tmpSegment/btnQuadD"]
margin_right = 128.0
margin_bottom = 128.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuadL" type="TouchScreenButton" parent="templateNode/tmpSegment"]
shape = SubResource( 16 )
shape_centered = false

[node name="texQuad" type="TextureRect" parent="templateNode/tmpSegment/btnQuadL"]
margin_right = 128.0
margin_bottom = 128.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpConfirm" type="NinePatchRect" parent="templateNode"]
margin_left = 442.0
margin_top = -313.0
margin_right = 698.0
margin_bottom = -185.0
texture = ExtResource( 68 )
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
script = ExtResource( 79 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labMenu" type="Label" parent="templateNode/tmpConfirm"]
margin_right = 256.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 11 )
text = "Choice?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnYes" type="TouchScreenButton" parent="templateNode/tmpConfirm"]
position = Vector2( 0, 128 )
normal = ExtResource( 21 )

[node name="btnNo" type="TouchScreenButton" parent="templateNode/tmpConfirm"]
position = Vector2( 128, 128 )
normal = ExtResource( 25 )

[node name="tmpProgress" type="TextureProgress" parent="templateNode"]
margin_left = 726.624
margin_top = 203.705
margin_right = 1026.62
margin_bottom = 503.705
texture_progress = ExtResource( 80 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpShape" type="Control" parent="templateNode"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpTileDetect" type="TouchScreenButton" parent="templateNode"]
position = Vector2( 1106.69, -1.29077 )
normal = ExtResource( 81 )
shape = SubResource( 12 )
script = ExtResource( 78 )

[node name="tmpMenu" type="Tween" parent="templateNode"]
playback_speed = 1.5
playback/speed = 1.5
[connection signal="released" from="BottomBarNode/btnFactoryFloor" to="BottomBarNode" method="_on_btnFactoryFloor_released"]
[connection signal="released" from="BottomBarNode/btnCraftingFloor" to="BottomBarNode" method="_on_btnCraftingFloor_released"]
[connection signal="released" from="BottomBarNode/btnUpgradesFloor" to="BottomBarNode" method="_on_btnUpgradesFloor_released"]
[connection signal="released" from="BottomBarNode/btnResearchFloor" to="BottomBarNode" method="_on_btnResearchFloor_released"]
[connection signal="released" from="BottomBarNode/btnEventsFloor" to="BottomBarNode" method="_on_btnEventsFloor_released"]
[connection signal="released" from="BottomBarNode/btnQuestsFloor" to="BottomBarNode" method="_on_btnQuestsFloor_released"]
[connection signal="released" from="BottomBarNode/btnPopulaceFloor" to="BottomBarNode" method="_on_btnPopulaceFloor_released"]
[connection signal="released" from="BottomBarNode/btnSettingsFloor" to="BottomBarNode" method="_on_btnSettingsFloor_released"]
[connection signal="pressed" from="templateNode/tmpAddStructure/btnAdd" to="templateNode/tmpAddStructure" method="_on_btnAdd_pressed"]
[connection signal="released" from="templateNode/tmpAddStructure/btnAdd" to="templateNode/tmpAddStructure" method="_on_btnAdd_released"]
[connection signal="released" from="templateNode/tmpConfirm/btnYes" to="templateNode/tmpConfirm" method="_on_btnYes_released"]
[connection signal="released" from="templateNode/tmpConfirm/btnNo" to="templateNode/tmpConfirm" method="_on_btnNo_released"]
[connection signal="pressed" from="templateNode/tmpTileDetect" to="templateNode/tmpTileDetect" method="_on_tmpTileDetect_pressed"]
[connection signal="released" from="templateNode/tmpTileDetect" to="templateNode/tmpTileDetect" method="_on_tmpTileDetect_released"]
